--- a/qtdes/Main.ui
+++ b/qtdes/Main.ui
@@ -78,7 +78,7 @@ khối lượng sản phẩm</string>
    <widget class="QComboBox" name="MachineID">
     <property name="geometry">
      <rect>
-      <x>180</x>
+      <x>120</x>
       <y>120</y>
       <width>91</width>
       <height>41</height>
@@ -228,9 +228,9 @@ khối lượng sản phẩm</string>
    <widget class="QLineEdit" name="ProductID">
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>180</y>
-      <width>771</width>
+      <x>340</x>
+      <y>120</y>
+      <width>611</width>
       <height>41</height>
      </rect>
     </property>
@@ -255,8 +255,8 @@ khối lượng sản phẩm</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>180</x>
-      <y>240</y>
+      <x>170</x>
+      <y>300</y>
       <width>191</width>
       <height>41</height>
      </rect>
@@ -285,9 +285,9 @@ khối lượng sản phẩm</string>
    <widget class="QLabel" name="CATiD">
     <property name="geometry">
      <rect>
-      <x>470</x>
-      <y>240</y>
-      <width>191</width>
+      <x>450</x>
+      <y>300</y>
+      <width>251</width>
       <height>41</height>
      </rect>
     </property>
@@ -315,9 +315,9 @@ khối lượng sản phẩm</string>
    <widget class="QLabel" name="INTiD">
     <property name="geometry">
      <rect>
-      <x>750</x>
-      <y>240</y>
-      <width>191</width>
+      <x>780</x>
+      <y>300</y>
+      <width>161</width>
       <height>41</height>
      </rect>
     </property>
@@ -349,15 +349,15 @@ khối lượng sản phẩm</string>
     <property name="geometry">
      <rect>
       <x>180</x>
-      <y>300</y>
+      <y>180</y>
       <width>761</width>
-      <height>41</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Times New Roman</family>
-      <pointsize>20</pointsize>
+      <pointsize>24</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -400,7 +400,7 @@ khối lượng sản phẩm</string>
     <property name="font">
      <font>
       <family>Times New Roman</family>
-      <pointsize>24</pointsize>
+      <pointsize>16</pointsize>
       <weight>75</weight>
       <bold>true</bold>
      </font>
@@ -443,7 +443,7 @@ dữ liệu mới</string>
      <rect>
       <x>20</x>
       <y>120</y>
-      <width>141</width>
+      <width>91</width>
       <height>41</height>
      </rect>
     </property>
@@ -460,9 +460,9 @@ dữ liệu mới</string>
    <widget class="QLabel" name="QuetMa">
     <property name="geometry">
      <rect>
-      <x>20</x>
-      <y>180</y>
-      <width>141</width>
+      <x>230</x>
+      <y>120</y>
+      <width>101</width>
       <height>41</height>
      </rect>
     </property>
@@ -480,8 +480,8 @@ dữ liệu mới</string>
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>240</y>
-      <width>151</width>
+      <y>300</y>
+      <width>141</width>
       <height>41</height>
      </rect>
     </property>
@@ -492,16 +492,16 @@ dữ liệu mới</string>
      </font>
     </property>
     <property name="text">
-     <string>Mã sản phẩm:</string>
+     <string>Mã sản phẩm</string>
     </property>
    </widget>
    <widget class="QLabel" name="TenSanPham">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>300</y>
+      <y>180</y>
       <width>151</width>
-      <height>41</height>
+      <height>111</height>
      </rect>
     </property>
     <property name="font">
@@ -517,8 +517,8 @@ dữ liệu mới</string>
    <widget class="QLabel" name="Cat">
     <property name="geometry">
      <rect>
-      <x>390</x>
-      <y>240</y>
+      <x>370</x>
+      <y>300</y>
       <width>71</width>
       <height>41</height>
      </rect>
@@ -539,8 +539,8 @@ dữ liệu mới</string>
    <widget class="QLabel" name="Int">
     <property name="geometry">
      <rect>
-      <x>680</x>
-      <y>240</y>
+      <x>710</x>
+      <y>300</y>
       <width>61</width>
       <height>41</height>
      </rect>
@@ -567,11 +567,19 @@ dữ liệu mới</string>
       <height>251</height>
      </rect>
     </property>
+    <property name="font">
+     <font>
+      <pointsize>48</pointsize>
+     </font>
+    </property>
     <property name="frameShape">
      <enum>QFrame::Box</enum>
     </property>
     <property name="text">
      <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
     </property>
    </widget>
    <widget class="QWidget" name="gridLayoutWidget">
@@ -726,7 +734,7 @@ font: 20pt &quot;Times New Roman&quot;;</string>
      </item>
     </layout>
    </widget>
-   <widget class="QCheckBox" name="checkBox">
+   <widget class="QCheckBox" name="Calendar">
     <property name="geometry">
      <rect>
       <x>200</x>
@@ -793,12 +801,12 @@ font: 20pt &quot;Times New Roman&quot;;</string>
 băng tải</string>
     </property>
    </widget>
-   <widget class="QLabel" name="POInfo">
+   <widget class="QLabel" name="QuanBoxInfo">
     <property name="geometry">
      <rect>
-      <x>60</x>
+      <x>70</x>
       <y>360</y>
-      <width>41</width>
+      <width>151</width>
       <height>41</height>
      </rect>
     </property>
@@ -809,87 +817,16 @@ băng tải</string>
      </font>
     </property>
     <property name="text">
-     <string>PO:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="RemainInfo">
-    <property name="geometry">
-     <rect>
-      <x>320</x>
-      <y>360</y>
-      <width>141</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Times New Roman</family>
-      <pointsize>19</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Số lượng cần:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="QuanInfo">
-    <property name="geometry">
-     <rect>
-      <x>600</x>
-      <y>360</y>
-      <width>181</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Times New Roman</family>
-      <pointsize>19</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Số lượng đã chạy:</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="PO">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>110</x>
-      <y>360</y>
-      <width>191</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Times New Roman</family>
-      <pointsize>20</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(85, 255, 255);</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::Box</enum>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <string>Thùng đã chạy</string>
     </property>
    </widget>
    <widget class="QLabel" name="label_4">
     <property name="geometry">
      <rect>
       <x>10</x>
-      <y>230</y>
+      <y>170</y>
       <width>941</width>
-      <height>121</height>
+      <height>181</height>
      </rect>
     </property>
     <property name="frameShape">
@@ -915,10 +852,10 @@ băng tải</string>
      <string/>
     </property>
    </widget>
-   <widget class="QLabel" name="RemainInfo_2">
+   <widget class="QLabel" name="QuanBoxUnit">
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>280</x>
       <y>360</y>
       <width>61</width>
       <height>41</height>
@@ -931,35 +868,16 @@ băng tải</string>
      </font>
     </property>
     <property name="text">
-     <string>thùng</string>
+     <string>thùng</string>
     </property>
    </widget>
-   <widget class="QLabel" name="QuanInfo_2">
-    <property name="geometry">
-     <rect>
-      <x>840</x>
-      <y>360</y>
-      <width>61</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Times New Roman</family>
-      <pointsize>19</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>thùng</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="Remain">
+   <widget class="QLabel" name="QuanBox">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>470</x>
+      <x>230</x>
       <y>360</y>
       <width>41</width>
       <height>41</height>
@@ -986,13 +904,147 @@ băng tải</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QLabel" name="Quan">
+   <widget class="QPushButton" name="PrintStamp">
+    <property name="geometry">
+     <rect>
+      <x>130</x>
+      <y>10</y>
+      <width>111</width>
+      <height>81</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Times New Roman</family>
+      <pointsize>16</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(170, 170, 255);</string>
+    </property>
+    <property name="text">
+     <string>In tem
+thủ công</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="QuanStampManualUnit">
+    <property name="geometry">
+     <rect>
+      <x>850</x>
+      <y>360</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Times New Roman</family>
+      <pointsize>19</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>tem</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="QuanStampManualInfo">
+    <property name="geometry">
+     <rect>
+      <x>630</x>
+      <y>360</y>
+      <width>161</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Times New Roman</family>
+      <pointsize>19</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Tem in thủ công</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="QuanStampManual">
     <property name="enabled">
      <bool>true</bool>
     </property>
     <property name="geometry">
      <rect>
-      <x>790</x>
+      <x>800</x>
+      <y>360</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Times New Roman</family>
+      <pointsize>20</pointsize>
+      <weight>75</weight>
+      <bold>true</bold>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: rgb(255, 170, 127);</string>
+    </property>
+    <property name="frameShape">
+     <enum>QFrame::Box</enum>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="alignment">
+     <set>Qt::AlignCenter</set>
+    </property>
+   </widget>
+   <widget class="QLabel" name="QuanStampAutoUnit">
+    <property name="geometry">
+     <rect>
+      <x>570</x>
+      <y>360</y>
+      <width>41</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Times New Roman</family>
+      <pointsize>19</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>tem</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="QuanStampAutoInfo">
+    <property name="geometry">
+     <rect>
+      <x>360</x>
+      <y>360</y>
+      <width>151</width>
+      <height>41</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Times New Roman</family>
+      <pointsize>19</pointsize>
+     </font>
+    </property>
+    <property name="text">
+     <string>Tem in tự động</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="QuanStampAuto">
+    <property name="enabled">
+     <bool>true</bool>
+    </property>
+    <property name="geometry">
+     <rect>
+      <x>520</x>
       <y>360</y>
       <width>41</width>
       <height>41</height>
@@ -1040,35 +1092,19 @@ băng tải</string>
    <zorder>Int</zorder>
    <zorder>Status</zorder>
    <zorder>gridLayoutWidget</zorder>
-   <zorder>checkBox</zorder>
+   <zorder>Calendar</zorder>
    <zorder>DD_MM_YY</zorder>
    <zorder>ArduinoCon</zorder>
-   <zorder>POInfo</zorder>
-   <zorder>RemainInfo</zorder>
-   <zorder>QuanInfo</zorder>
-   <zorder>PO</zorder>
-   <zorder>RemainInfo_2</zorder>
-   <zorder>QuanInfo_2</zorder>
-   <zorder>Remain</zorder>
-   <zorder>Quan</zorder>
-  </widget>
-  <widget class="QStatusBar" name="statusbar"/>
-  <widget class="QMenuBar" name="menuBar">
-   <property name="geometry">
-    <rect>
-     <x>0</x>
-     <y>0</y>
-     <width>961</width>
-     <height>21</height>
-    </rect>
-   </property>
-   <widget class="QMenu" name="Maint">
-    <property name="title">
-     <string>Kiểm tra tem</string>
-    </property>
-    <addaction name="PrintManu"/>
-   </widget>
-   <addaction name="Maint"/>
+   <zorder>QuanBoxInfo</zorder>
+   <zorder>QuanBoxUnit</zorder>
+   <zorder>QuanBox</zorder>
+   <zorder>PrintStamp</zorder>
+   <zorder>QuanStampManualUnit</zorder>
+   <zorder>QuanStampManualInfo</zorder>
+   <zorder>QuanStampManual</zorder>
+   <zorder>QuanStampAutoUnit</zorder>
+   <zorder>QuanStampAutoInfo</zorder>
+   <zorder>QuanStampAuto</zorder>
   </widget>
   <action name="PrintManu">
    <property name="text">
