--- a/qtdes/ChangePd.ui
+++ b/qtdes/ChangePd.ui
@@ -6,9 +6,21 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>400</width>
-    <height>342</height>
+    <width>640</width>
+    <height>480</height>
    </rect>
+  </property>
+  <property name="minimumSize">
+   <size>
+    <width>640</width>
+    <height>480</height>
+   </size>
+  </property>
+  <property name="maximumSize">
+   <size>
+    <width>640</width>
+    <height>480</height>
+   </size>
   </property>
   <property name="windowTitle">
    <string>Bộ đếm</string>
@@ -20,8 +32,8 @@
   <widget class="QPushButton" name="Confirm">
    <property name="geometry">
     <rect>
-     <x>160</x>
-     <y>270</y>
+     <x>280</x>
+     <y>400</y>
      <width>81</width>
      <height>61</height>
     </rect>
@@ -35,7 +47,7 @@
     <rect>
      <x>20</x>
      <y>20</y>
-     <width>361</width>
+     <width>601</width>
      <height>51</height>
     </rect>
    </property>
@@ -56,10 +68,10 @@
   <widget class="QLabel" name="Timer">
    <property name="geometry">
     <rect>
-     <x>10</x>
-     <y>80</y>
-     <width>381</width>
-     <height>171</height>
+     <x>20</x>
+     <y>280</y>
+     <width>601</width>
+     <height>101</height>
     </rect>
    </property>
    <property name="font">
@@ -68,7 +80,31 @@
     </font>
    </property>
    <property name="frameShape">
-    <enum>QFrame::Box</enum>
+    <enum>QFrame::NoFrame</enum>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="alignment">
+    <set>Qt::AlignCenter</set>
+   </property>
+  </widget>
+  <widget class="QLabel" name="Product">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>70</y>
+     <width>601</width>
+     <height>191</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <pointsize>28</pointsize>
+    </font>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::NoFrame</enum>
    </property>
    <property name="text">
     <string/>
