--- a/qtdes/Main.ui
+++ b/qtdes/Main.ui
@@ -779,7 +779,7 @@ băng tải</string>
    <widget class="QLabel" name="QuanBoxInfo">
     <property name="geometry">
      <rect>
-      <x>70</x>
+      <x>120</x>
       <y>360</y>
       <width>151</width>
       <height>41</height>
@@ -830,7 +830,7 @@ băng tải</string>
    <widget class="QLabel" name="QuanBoxUnit">
     <property name="geometry">
      <rect>
-      <x>280</x>
+      <x>330</x>
       <y>360</y>
       <width>61</width>
       <height>41</height>
@@ -852,7 +852,7 @@ băng tải</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>230</x>
+      <x>280</x>
       <y>360</y>
       <width>41</width>
       <height>41</height>
@@ -879,7 +879,7 @@ băng tải</string>
      <set>Qt::AlignCenter</set>
     </property>
    </widget>
-   <widget class="QPushButton" name="PrintStamp">
+   <widget class="QPushButton" name="ShowStamp">
     <property name="geometry">
      <rect>
       <x>130</x>
@@ -900,85 +900,14 @@ băng tải</string>
      <string notr="true">background-color: rgb(170, 170, 255);</string>
     </property>
     <property name="text">
-     <string>In tem
-thủ công</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="QuanStampManualUnit">
-    <property name="geometry">
-     <rect>
-      <x>850</x>
-      <y>360</y>
-      <width>41</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Times New Roman</family>
-      <pointsize>19</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>tem</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="QuanStampManualInfo">
-    <property name="geometry">
-     <rect>
-      <x>630</x>
-      <y>360</y>
-      <width>161</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Times New Roman</family>
-      <pointsize>19</pointsize>
-     </font>
-    </property>
-    <property name="text">
-     <string>Tem in thủ công</string>
-    </property>
-   </widget>
-   <widget class="QLabel" name="QuanStampManual">
-    <property name="enabled">
-     <bool>true</bool>
-    </property>
-    <property name="geometry">
-     <rect>
-      <x>800</x>
-      <y>360</y>
-      <width>41</width>
-      <height>41</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Times New Roman</family>
-      <pointsize>20</pointsize>
-      <weight>75</weight>
-      <bold>true</bold>
-     </font>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">background-color: rgb(255, 170, 127);</string>
-    </property>
-    <property name="frameShape">
-     <enum>QFrame::Box</enum>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
+     <string>Kiểm tra
+tem</string>
     </property>
    </widget>
    <widget class="QLabel" name="QuanStampAutoUnit">
     <property name="geometry">
      <rect>
-      <x>570</x>
+      <x>800</x>
       <y>360</y>
       <width>41</width>
       <height>41</height>
@@ -997,7 +926,7 @@ thủ công</string>
    <widget class="QLabel" name="QuanStampAutoInfo">
     <property name="geometry">
      <rect>
-      <x>360</x>
+      <x>590</x>
       <y>360</y>
       <width>151</width>
       <height>41</height>
@@ -1019,7 +948,7 @@ thủ công</string>
     </property>
     <property name="geometry">
      <rect>
-      <x>520</x>
+      <x>750</x>
       <y>360</y>
       <width>41</width>
       <height>41</height>
@@ -1097,10 +1026,7 @@ sản phẩm</string>
    <zorder>QuanBoxInfo</zorder>
    <zorder>QuanBoxUnit</zorder>
    <zorder>QuanBox</zorder>
-   <zorder>PrintStamp</zorder>
-   <zorder>QuanStampManualUnit</zorder>
-   <zorder>QuanStampManualInfo</zorder>
-   <zorder>QuanStampManual</zorder>
+   <zorder>ShowStamp</zorder>
    <zorder>QuanStampAutoUnit</zorder>
    <zorder>QuanStampAutoInfo</zorder>
    <zorder>QuanStampAuto</zorder>
@@ -1120,7 +1046,7 @@ sản phẩm</string>
      <rect>
       <x>269</x>
       <y>125</y>
-      <width>300</width>
+      <width>135</width>
       <height>72</height>
      </rect>
     </property>
