--- a/qtdes/SetConfig.ui
+++ b/qtdes/SetConfig.ui
@@ -7,19 +7,19 @@
     <x>0</x>
     <y>0</y>
     <width>500</width>
-    <height>340</height>
+    <height>380</height>
    </rect>
   </property>
   <property name="minimumSize">
    <size>
     <width>500</width>
-    <height>340</height>
+    <height>380</height>
    </size>
   </property>
   <property name="maximumSize">
    <size>
     <width>500</width>
-    <height>340</height>
+    <height>380</height>
    </size>
   </property>
   <property name="windowTitle">
@@ -33,9 +33,9 @@
    <property name="geometry">
     <rect>
      <x>210</x>
-     <y>260</y>
+     <y>320</y>
      <width>81</width>
-     <height>61</height>
+     <height>41</height>
     </rect>
    </property>
    <property name="text">
@@ -495,6 +495,70 @@
      <string>9</string>
     </property>
    </item>
+  </widget>
+  <widget class="QLabel" name="label_6">
+   <property name="geometry">
+    <rect>
+     <x>20</x>
+     <y>260</y>
+     <width>231</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Times New Roman</family>
+     <pointsize>19</pointsize>
+    </font>
+   </property>
+   <property name="frameShape">
+    <enum>QFrame::NoFrame</enum>
+   </property>
+   <property name="text">
+    <string>Chênh lệch cho phép</string>
+   </property>
+  </widget>
+  <widget class="QComboBox" name="range">
+   <property name="geometry">
+    <rect>
+     <x>290</x>
+     <y>260</y>
+     <width>101</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="font">
+    <font>
+     <family>Times New Roman</family>
+     <pointsize>18</pointsize>
+    </font>
+   </property>
+   <property name="currentIndex">
+    <number>-1</number>
+   </property>
+   <item>
+    <property name="text">
+     <string>2</string>
+    </property>
+   </item>
+   <item>
+    <property name="text">
+     <string>4</string>
+    </property>
+   </item>
+  </widget>
+  <widget class="QPushButton" name="range_Confirm">
+   <property name="geometry">
+    <rect>
+     <x>410</x>
+     <y>260</y>
+     <width>71</width>
+     <height>41</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Xác nhận</string>
+   </property>
   </widget>
  </widget>
  <resources>
